--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "rewrites": [{
-    "source": "(.*)", "destination": "/api/index.ts"
+    "source": "(.*)", "destination": "/api/index.js"
   }]
 }
